[package]
name = "audio_synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.5"
anyhow = "1.0.58"
vizia = {git = "https://github.com/magnetophon/vizia", features = ["x11"]}
crossbeam-channel = "0.5.5"
